Enabled speedometer to use percentages for range values Heat maps display without errors